pkg/plugins/policies/meshtimeout/plugin/testdata/real_mesh_external_service.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10001
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      commonHttpProtocolOptions:
        idleTimeout: 0s
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      requestHeadersTimeout: 0s
      routeConfig:
        name: outbound:backend
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/display-name=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: backend
          routes:
          - match:
              prefix: /
            name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
            route:
              cluster: backend
              idleTimeout: 9s
              timeout: 99s
      statPrefix: kri_extsvc_default_zone-1_backend-ns_backend_10001
name: kri_extsvc_default_zone-1_backend-ns_backend_10001
trafficDirection: OUTBOUND
